<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/nav_favorite" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_person"
            android:title="@string/nav_user" />
    </group>

    <item android:title="@string/nav_account">
        <menu>
            <item
                android:id="@+id/nav_sig_out"
                android:icon="@drawable/ic_log_out"
                android:title="@string/nav_sig_out" />
        </menu>
    </item>
</menu>